syntax = "proto3";

option csharp_namespace = "TransactionService.Protos";

package transaction;

service TransactionService {
  rpc GetTransactions (Empty) returns (Transactions);
  rpc GetTransactionByUserId (GetTransactionsByUserIdRequest) returns (Transactions);
  rpc GetTransactionById (GetTransactionByIdRequest) returns (Transaction);
  rpc AddTransaction (AddTransactionRequest) returns (Transaction);
  rpc UpdateTransaction (UpdateTransactionRequest) returns (Transaction);
  rpc DeleteTransaction (DeleteTransactionRequest) returns (Empty);
}

message Transaction {
  string id = 1;
  string userId = 2;
  string type = 3;
  float amount = 4;
  string description = 5;
  string status = 6;
}

message Transactions {
  repeated Transaction allTransactions = 1;
}

message Empty {

}

message GetTransactionsByUserIdRequest {
  string userId = 1;
}

message GetTransactionByIdRequest {
  string id = 1;
}

message AddTransactionRequest {
  Transaction transaction = 1;
}

message UpdateTransactionRequest {
  Transaction transaction = 1;
}

message DeleteTransactionRequest {
  string id = 1;
}
